--- a/seaFood/css/seaFoodInfo/main.css
+++ b/seaFood/css/seaFoodInfo/main.css
@@ -23,6 +23,9 @@
     font-weight: bold;
 }
 
+
+
+
 .fish {
     width: 100px;
     height: 100%;
@@ -203,6 +206,7 @@
     position: relative;
     justify-content: center;
     flex-wrap: wrap;
+    padding-top: 18px;
 }
 
   .salmon{
