--- a/seaFood/css/fish/header.css
+++ b/seaFood/css/fish/header.css
@@ -1,3 +1,134 @@
+.nav-main {
+    /* width: 98.9%; */
+    width: 100vw;
+    height: 50px;
+    top: 0;
+    position: fixed;
+    background-color: #fff;
+    display: flex;
+    flex-wrap: wrap;
+    z-index: 2000;
+  }
+  
+  .btn-toggle-nav {
+    width: 46px;
+    height: 100%;
+    background-color: rgb(199, 188, 188);
+    background-image: url("../../assets/images/fish.png");
+    background-repeat: no-repeat;
+    background-size: 55%;
+    background-position: center;
+    cursor: pointer;
+  }
+  
+  .btn-toggle-nav:hover {
+    opacity: 0.3;
+  }
+  
+  .nav-main ul {
+    display: flex;
+    flex-wrap: wrap;
+    padding-left: 15px;
+  }
+  
+  .nav-main ul li {
+    list-style: none;
+    line-height: 50px;
+    z-index: 2000;
+  }
+  
+  .nav-main ul li a {
+    display: block;
+    height: 100%;
+    padding: 0 10px;
+    text-transform: uppercase;
+    text-decoration: none;
+    color: #4954bb;
+    font-family: arial;
+    font-size: 16px;
+    z-index: 2000;
+  }
+  
+  .nav-sidebar ul li span {
+    text-indent: 65px;
+  }
+  
+  .nav-sidebar {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 36px;
+    height: calc(100vh - 50px);
+    padding: 0 5px;
+    background-color: rgba(190, 132, 116, 0);
+    z-index: 2000;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .nav-sidebar ul {
+    padding-top: 15px;
+    overflow: hidden;
+    visibility: hidden;
+  }
+  
+  .nav-sidebar ul li {
+    line-height: 50px;
+    list-style: none;
+  }
+  
+  .nav-sidebar ul li span, .nav-sidebar ul li a {
+    display: block;
+    height: 60px;
+    padding: 0 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+    color: #fff;
+    font-family: arial;
+    font-size: 16px;
+    white-space: nowrap;
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+  }
+  
+  .nav-sidebar ul li, .nav-sidebar ul li a:hover {
+    background-color: #227;
+  }
+
+
+
+
+  .collapsible {
+      display: flex;
+      background-color: #777;
+      color: white;
+      cursor: pointer;
+      padding: 18px;
+      width: 50%;
+      border: none;
+      text-align: left;
+      outline: none;
+      font-size: 15px;
+      justify-content: center;
+      margin: 10px;
+    }
+    
+    .active, .collapsible:hover {
+      background-color: #555;
+    }
+    
+    .content2 {
+      padding: 0;
+      display: none;
+      overflow: hidden;
+      background-color: #f1f1f1;
+    }
+
+
+
+
+
+
+
 .salmon h1 {
     display: flex;
     font-size: 22px;
@@ -9,15 +140,18 @@
     padding-top: 40px;
     }
     
-    .content h2 {
+
+
+    /* .content h2 {
         justify-content: center;
         font-size: 22px;
-        padding:40px;
+        padding: 40px;
         position: relative;
         display: flex;
         text-decoration: underline;
+        flex-wrap: wrap;
         font-weight: 600;
-    }
+    } */
     
     .salmonType1 {
         display: flex;
@@ -32,6 +166,7 @@
         text-align: center;
         background-color: #f1f1f1;
         padding-bottom: 50px;
+        margin-top: 60px;
     }
     
     .salmonType1 h1 {
@@ -243,7 +378,8 @@
             flex-direction: column;
             text-align: center;
             background-color: #f1f1f1;
-            padding-bottom: 50px;
+            margin-top: 20px;
+            padding-bottom: 20px;
         }
         
         .tunaType1 h1 {
@@ -733,3 +869,10 @@
             width: 100vw;
             padding-top: 20px;
         }
+
+
+
+
+
+
+
