--- a/seaFood/css/fish/gallery.css
+++ b/seaFood/css/fish/gallery.css
@@ -44,6 +44,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/fish/salmon/1.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffffff;
 }
 
 .salPic2 {
@@ -66,6 +67,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/fish/salmon/3.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffffff;
 }
 
 .salPic4 {
@@ -88,6 +90,7 @@ img {vertical-align: middle;}
   background-image: url("../../Assets/images/fish/salmon/5.jfif");
   justify-content: center;
   background-position: center;
+  background-color: #ffffff;
 }
 
 .salPic6 {
