--- a/seaFood/css/fish/main.css
+++ b/seaFood/css/fish/main.css
@@ -24,6 +24,12 @@
     z-index: 1000;
 } */
 
+/* body {
+    overflow-y: scroll;
+    z-index: 3000;
+  } */
+  
+
 .fish {
     width: 100px;
     height: 100%;
